[package]
name = "toluol-proto"
version = "2.0.0"
authors = ["Max von Forell <max@vonforell.de>"]
license = "MIT"
repository = "https://sr.ht/~mvforell/toluol"
documentation = "https://docs.rs/toluol-proto"
description = "DNS protocol definitions for toluol"
keywords = ["dns"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2021"

[lib]
name = "toluol_proto"
path = "./src/lib.rs"

[dependencies]
byteorder = "1.4"
chrono = "0.4"
data-encoding = "2.3"
ecdsa = "0.13"
owo-colors = { version = "3.2", features = ["supports-colors"] }
p256 = { version = "0.10", features = ["ecdsa"] }
permutation = "0.4"
rand = "0.8"
repr-with-fallback = "0.1"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = "0.10"
smartstring = { version = "1.0", features = ["serde"] }
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
