[package]
name = "toluol"
version = "2.0.0"
authors = ["Max von Forell <max@vonforell.de>"]
license = "MIT"
repository = "https://sr.ht/~mvforell/toluol"
documentation = "https://docs.rs/toluol"
description = "A crate for making DNS queries"
keywords = ["dns"]
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "toluol"
path = "./src/main.rs"
doc = false

[features]
default = ["http", "json", "tls"]
http = ["ureq"]
json = ["serde_json", "toluol-proto/serde"]
tls = ["rustls", "webpki-roots"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
data-encoding = "2.3"
lazy_static = "1.4"
owo-colors = { version = "3.2", features = ["supports-colors"] }
rand = "0.8"
rustls = { version = "0.20", optional = true }
serde_json = { version = "1.0", optional = true }
toluol-proto = "2.0"
ureq = { version = "2.4", optional = true }
webpki = "0.22"
webpki-roots = { version = "0.22", optional = true }
